// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders a hydrated cart 1`] = `
<div>
  <nav
    className="nv-s nv-s--sticky"
    data-jsx={792433154}
  >
    <div
      className="nv-s-l bar"
      data-jsx={792433154}
    >
      <a
        className="nv-s-l-b back-link"
        data-jsx={792433154}
        href="/death"
        onClick={[Function]}
      >
        Back to Lookup
      </a>
      <a
        className="cart-link"
        data-jsx={792433154}
        href="/death/checkout"
        onClick={[Function]}
      >
        7
      </a>
    </div>
  </nav>
  <div
    className="p-a300"
  >
    <div
      className="sh sh--b0 m-v300"
    >
      <h1
        className="sh-title"
      >
        Checkout
      </h1>
    </div>
  </div>
  <div>
    <div
      className="p-a300 result"
      data-jsx={1389666004}
    >
      <input
        aria-label="Quantity"
        className="br br-a150 quantity-box"
        data-jsx={1389666004}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        value="5"
      />
      <div
        className="certificate-info"
        data-jsx={1389666004}
      >
        <div
          data-jsx={1389666004}
        >
          Bruce
           
          Banner
        </div>
        <div
          data-jsx={1389666004}
          style={
            Object {
              "fontStyle": "italic",
            }
          }
        >
          3/4/2016
          <span
            className="id-label"
            data-jsx={1389666004}
          >
            ID:
          </span>
           
          000002
        </div>
      </div>
      <button
        data-jsx={1389666004}
        onClick={[Function]}
        type="button"
      >
        X
      </button>
    </div>
    <div
      className="p-a300 result"
      data-jsx={1389666004}
    >
      <input
        aria-label="Quantity"
        className="br br-a150 quantity-box"
        data-jsx={1389666004}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        value="2"
      />
      <div
        className="certificate-info"
        data-jsx={1389666004}
      >
        <div
          data-jsx={1389666004}
        >
          Logan
           
          Howlett
        </div>
        <div
          data-jsx={1389666004}
          style={
            Object {
              "fontStyle": "italic",
            }
          }
        >
          4/15/2014
          <span
            className="id-label"
            data-jsx={1389666004}
          >
            ID:
          </span>
           
          000001
        </div>
      </div>
      <button
        data-jsx={1389666004}
        onClick={[Function]}
        type="button"
      >
        X
      </button>
    </div>
    <div
      className="p-a300 g"
      data-jsx={2595578495}
    >
      <div
        className="m-v500 g--9"
      >
        <div
          className="t--info"
        >
          7
           
          certificates
           × $
          14
           
          + 
          2.75
          % credit card fee
        </div>
        <div
          className="sh sh--b0"
        >
          <span
            className="sh-title"
          >
            Subtotal: $
            100.70
          </span>
        </div>
      </div>
      <a
        className="btn g--3 m-v500"
        data-jsx={2595578495}
        href="/death/payment"
        onClick={[Function]}
      >
        Pay and Finish
      </a>
    </div>
  </div>
</div>
`;

exports[`rendering renders loading for unhydrated cart 1`] = `
<div>
  <nav
    className="nv-s nv-s--sticky"
    data-jsx={792433154}
  >
    <div
      className="nv-s-l bar"
      data-jsx={792433154}
    >
      <a
        className="nv-s-l-b back-link"
        data-jsx={792433154}
        href="/death"
        onClick={[Function]}
      >
        Back to Lookup
      </a>
      <a
        className="cart-link"
        data-jsx={792433154}
        href="/death/checkout"
        onClick={[Function]}
      >
        8
      </a>
    </div>
  </nav>
  <div
    className="p-a300"
  >
    <div
      className="sh sh--b0 m-v300"
    >
      <h1
        className="sh-title"
      >
        Checkout
      </h1>
    </div>
  </div>
  <div>
    <div
      className="p-a300 g"
      data-jsx={2595578495}
    >
      <div
        className="m-v500 g--9"
      >
        <div
          className="t--info"
        >
          8
           
          certificates
           × $
          14
           
          + 
          2.75
          % credit card fee
        </div>
        <div
          className="sh sh--b0"
        >
          <span
            className="sh-title"
          >
            Subtotal: $
            115.09
          </span>
        </div>
      </div>
      <a
        className="btn g--3 m-v500"
        data-jsx={2595578495}
        href="/death/payment"
        onClick={[Function]}
      >
        Pay and Finish
      </a>
    </div>
  </div>
</div>
`;
